--- a/Draw/Controller/Shop/VendingController~ipad.xib
+++ b/Draw/Controller/Shop/VendingController~ipad.xib
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1296</int>
+		<int key="IBDocument.SystemTarget">1536</int>
 		<string key="IBDocument.SystemVersion">11E53</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2840</string>
 		<string key="IBDocument.AppKitVersion">1138.47</string>
 		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1179</string>
+			<string key="NS.object.0">1926</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
-			<string>IBUIView</string>
+			<string>IBProxyObject</string>
+			<string>IBUIButton</string>
 			<string>IBUIImageView</string>
 			<string>IBUILabel</string>
-			<string>IBProxyObject</string>
 			<string>IBUIPageControl</string>
 			<string>IBUIScrollView</string>
-			<string>IBUIButton</string>
+			<string>IBUIView</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -44,6 +44,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{768, 1004}</string>
 						<reference key="NSSuperview" ref="945896182"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="424085961"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -65,6 +66,7 @@
 										<int key="NSvFlags">319</int>
 										<string key="NSFrameSize">{736, 785}</string>
 										<reference key="NSSuperview" ref="779889756"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="779750223"/>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -75,9 +77,10 @@
 									</object>
 									<object class="IBUIImageView" id="779750223">
 										<reference key="NSNextResponder" ref="779889756"/>
-										<int key="NSvFlags">319</int>
+										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{12, 150}, {712, 117}}</string>
 										<reference key="NSSuperview" ref="779889756"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="416091545"/>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -88,9 +91,10 @@
 									</object>
 									<object class="IBUIImageView" id="482694725">
 										<reference key="NSNextResponder" ref="779889756"/>
-										<int key="NSvFlags">319</int>
+										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{12, 390}, {712, 117}}</string>
 										<reference key="NSSuperview" ref="779889756"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="1012386690"/>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -98,9 +102,10 @@
 									</object>
 									<object class="IBUIImageView" id="1012386690">
 										<reference key="NSNextResponder" ref="779889756"/>
-										<int key="NSvFlags">319</int>
+										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{12, 628}, {712, 120}}</string>
 										<reference key="NSSuperview" ref="779889756"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="401141872"/>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -111,6 +116,7 @@
 										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{96, 196}, {34, 34}}</string>
 										<reference key="NSSuperview" ref="779889756"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="240215377"/>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -124,6 +130,7 @@
 										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{138, 194}, {100, 37}}</string>
 										<reference key="NSSuperview" ref="779889756"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="369374152"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -134,6 +141,7 @@
 										<object class="NSColor" key="IBUITextColor" id="275176821">
 											<int key="NSColorSpace">1</int>
 											<bytes key="NSRGB">MCAwIDAAA</bytes>
+											<string key="IBUIColorCocoaTouchKeyPath">darkTextColor</string>
 										</object>
 										<nil key="IBUIHighlightedColor"/>
 										<int key="IBUIBaselineAdjustment">0</int>
@@ -153,6 +161,7 @@
 										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{108, 673}, {100, 37}}</string>
 										<reference key="NSSuperview" ref="779889756"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="111807258"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -172,6 +181,7 @@
 										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{309, 194}, {40, 37}}</string>
 										<reference key="NSSuperview" ref="779889756"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="482694725"/>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -182,6 +192,7 @@
 										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{69, 63.5}, {122, 122}}</string>
 										<reference key="NSSuperview" ref="779889756"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="1017402077"/>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -193,6 +204,7 @@
 								</array>
 								<string key="NSFrameSize">{736, 785}</string>
 								<reference key="NSSuperview" ref="493068356"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="400034732"/>
 								<object class="NSColor" key="IBUIBackgroundColor" id="262949035">
 									<int key="NSColorSpace">3</int>
@@ -205,6 +217,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{57, 298}, {146, 133}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="572181171"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -215,6 +228,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{57, 529}, {146, 133}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="134006236"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -225,6 +239,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{304, 63.5}, {122, 122}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="770080089"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -235,6 +250,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{529, 58}, {146, 133}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="46949767"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -245,6 +261,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{55, 436}, {40, 37}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="990210300"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -255,6 +272,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{108, 434}, {100, 37}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="238489920"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -274,6 +292,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{55, 673}, {40, 37}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="516899176"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -284,6 +303,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{359, 192}, {100, 37}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="240110667"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -303,6 +323,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{551, 194}, {40, 37}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="776405328"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -313,6 +334,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{601, 194}, {100, 37}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="741407424"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -330,6 +352,7 @@
 						</array>
 						<string key="NSFrame">{{16, 89}, {736, 785}}</string>
 						<reference key="NSSuperview" ref="945896182"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="779889756"/>
 						<reference key="IBUIBackgroundColor" ref="262949035"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -342,6 +365,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{16, 13}, {88, 80}}</string>
 						<reference key="NSSuperview" ref="945896182"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="587755882"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -378,6 +402,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{225.5, 16}, {317, 66}}</string>
 						<reference key="NSSuperview" ref="945896182"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="556538896"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -391,6 +416,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{16, 881}, {276, 117}}</string>
 						<reference key="NSSuperview" ref="945896182"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="352309208"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -404,6 +430,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{312, 908}, {228, 65}}</string>
 						<reference key="NSSuperview" ref="945896182"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="101527790"/>
 						<reference key="IBUIBackgroundColor" ref="262949035"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -434,6 +461,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{318.5, 917}, {48, 48}}</string>
 						<reference key="NSSuperview" ref="945896182"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="470260798"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -447,6 +475,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{556, 908}, {196, 65}}</string>
 						<reference key="NSSuperview" ref="945896182"/>
+						<reference key="NSWindow"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -476,8 +505,9 @@
 					<object class="IBUIImageView" id="352309208">
 						<reference key="NSNextResponder" ref="945896182"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{110, 880}, {86, 78}}</string>
+						<string key="NSFrame">{{114, 880}, {78, 78}}</string>
 						<reference key="NSSuperview" ref="945896182"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="776394169"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -487,6 +517,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{153, 13}, {463, 68}}</string>
 						<reference key="NSSuperview" ref="945896182"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="598108438"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -515,6 +546,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{610, 14}, {142, 65}}</string>
 						<reference key="NSSuperview" ref="945896182"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="493068356"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -535,6 +567,7 @@
 						<object class="NSPSMatrix" key="NSFrameMatrix"/>
 						<string key="NSFrame">{{384, 824}, {38, 36}}</string>
 						<reference key="NSSuperview" ref="945896182"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -545,6 +578,7 @@
 				</array>
 				<string key="NSFrameSize">{768, 1004}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="594593148"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -637,6 +671,14 @@
 						<reference key="destination" ref="165921648"/>
 					</object>
 					<int key="connectionID">87</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">itemOutImageView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="516899176"/>
+					</object>
+					<int key="connectionID">90</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -962,7 +1004,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">89</int>
+			<int key="maxID">90</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -991,6 +1033,14 @@
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
+					<string key="className">UICustomPageControl</string>
+					<string key="superclassName">UIPageControl</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/UICustomPageControl.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
 					<string key="className">VendingController</string>
 					<string key="superclassName">PPViewController</string>
 					<dictionary class="NSMutableDictionary" key="outlets">
@@ -999,8 +1049,9 @@
 						<string key="coinsButton">UIButton</string>
 						<string key="coinsShopButton">UIButton</string>
 						<string key="itemListScrollView">UIScrollView</string>
+						<string key="itemOutImageView">UIImageView</string>
 						<string key="outItem">UIImageView</string>
-						<string key="pageControl">UIPageControl</string>
+						<string key="pageControl">UICustomPageControl</string>
 						<string key="titleImageView">UIImageView</string>
 						<string key="titleLabel">HKGirlFontLabel</string>
 					</dictionary>
@@ -1025,13 +1076,17 @@
 							<string key="name">itemListScrollView</string>
 							<string key="candidateClassName">UIScrollView</string>
 						</object>
+						<object class="IBToOneOutletInfo" key="itemOutImageView">
+							<string key="name">itemOutImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
 						<object class="IBToOneOutletInfo" key="outItem">
 							<string key="name">outItem</string>
 							<string key="candidateClassName">UIImageView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="pageControl">
 							<string key="name">pageControl</string>
-							<string key="candidateClassName">UIPageControl</string>
+							<string key="candidateClassName">UICustomPageControl</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="titleImageView">
 							<string key="name">titleImageView</string>
@@ -1053,7 +1108,7 @@
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<real value="1296" key="NS.object.0"/>
+			<real value="1536" key="NS.object.0"/>
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
@@ -1069,6 +1124,6 @@
 			<string key="tomato@2x.png">{122, 122}</string>
 			<string key="wood_shop_bg@2x.png">{640, 960}</string>
 		</dictionary>
-		<string key="IBCocoaTouchPluginVersion">1179</string>
+		<string key="IBCocoaTouchPluginVersion">1926</string>
 	</data>
 </archive>
